--- a/Portal.Client/Pages/Councils.razor
+++ b/Portal.Client/Pages/Councils.razor
@@ -1,13 +1,19 @@
+@inherits BaseDataComponent
+
 @page "/councils"
-
 <PageTitle>Councils - PRS Portal</PageTitle>
-
 <div class="container">
-            <h1 class="mb-4">
-                Councils
-            </h1>
-</div>
+    <div class="mb-2 d-flex">
+        <h1>Councils</h1>
+    </div>
 
+    <Card>
+
+        <ChildContent>
+
+        </ChildContent>
+    </Card>
+</div>
 @code {
     // Add your council management logic here
 }
