--- a/Portal.Client/Pages/Quotes.razor
+++ b/Portal.Client/Pages/Quotes.razor
@@ -1,9 +1,20 @@
-﻿@page "/quotes"
+﻿@inherits BaseDataComponent
 
+@page "/quotes"
+
+<PageTitle>Quotes - PRS Portal</PageTitle>
 <div class="container">
-    <h1>Quotes</h1>
-</div>
+    <div class="mb-2 d-flex">
+        <h1>Quotes</h1>
+    </div>
 
+    <Card>
+
+        <ChildContent>
+
+        </ChildContent>
+    </Card>
+</div>
 @code {
 
 }
