--- a/Portal.Client/Shared/RedirectToLogin.razor
+++ b/Portal.Client/Shared/RedirectToLogin.razor
@@ -6,6 +6,6 @@
 @code {
     protected override void OnInitialized()
     {
-        _navigationManager.NavigateToLogin(RemoteOptions.Get(Options.DefaultName).AuthenticationPaths.LogInPath);
+        _navigationManager.NavigateToLogin("authentication/login");
     }
 }
