--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -18,6 +18,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using MudBlazor
 @using Heron.MudCalendar
+@using Portal.Shared.DTO.Setting
+@using Portal.Shared.ResponseModels
 
 @inject IApiService _apiService;
 @inject IDialogService _dialogService;
